<resources>
    <string name="app_name">Parenthood</string>

    <string name="welcome">Welcome</string>
    <string name="please_answer_some_questions">Please answer some questions</string>
    <string name="i_have_a_baby">I have a baby</string>
    <string name="i_plan_to_have_a_baby">I plan to have a baby</string>
    <string name="about_text">about_text</string>
    <string name="sections">Sections</string>
    <string name="next">Next</string>
    <string name="what_your_name">What\'s your name?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="mother">Mother</string>
    <string name="father">Father</string>
    <string name="register">Register</string>
    <string name="create_new_test_caption">Create a new Test for the Article</string>
    <string name="passing_test">Passing test</string>
    <string name="your_answer">Your answer</string>
    <string name="your_question">Your question?</string>
    <string name="login">Login</string>
    <string name="who_are_you_gonna_be">Who are you gonna be?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
    <string name="hello_blank_fragment">hello-blank-fragment</string>
    <string name="tab_articles_main">Editor\'s Pick</string>
    <string name="tab_articles_other">All</string>
    <string name="take_test">Take test</string>
    <string name="create_test">Create test</string>
    <string name="question_1">Question 1</string>
    <string name="question_2">Question 2</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="onboarding_step_one">Read</string>
    <string name="onboarding_step_two">Complete tests</string>
    <string name="onboarding_step_three">Help others\nCreate your own tests</string>
</resources>
