<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_welcome_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.SignUpFragment">

        <TextView
            android:id="@+id/tv_welcome_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/welcome"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/what_your_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome_header"
            app:boxStrokeColor="@color/colorBlueLight"
            app:boxStrokeWidth="3dp"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:imeOptions="actionDone"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input_layout_register"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="8dp"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_input_layout"
            app:boxStrokeColor="@color/colorBlueLight"
            app:boxStrokeWidth="3dp"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input_edit_text_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout_register"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="8dp"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:boxStrokeColor="@color/colorBlueLight"
            app:boxStrokeWidth="3dp"
            app:layout_constraintTop_toBottomOf="@+id/email_input_layout_register"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input_edit_text_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="30dp">

            <TextView
                android:id="@+id/choose_parent_role_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="@dimen/marginNormal"
                android:layout_marginEnd="20dp"
                android:text="@string/who_are_you_gonna_be"
                android:textSize="@dimen/txtLittleSize" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/parent_role_toggle_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                app:singleSelection="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_mother"
                    style="@style/buttonBlueShape"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/marginLarge"
                    android:text="@string/mother" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_father"
                    style="@style/buttonBlueShape"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/father" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                style="@style/buttonStyleGreen"
                android:layout_width="150dp"
                android:layout_gravity="center"
                android:text="@string/register" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
